# amplify-docs-mcp-server

./: .gitignore  AI_INSTRUCTIONS.md  CLAUDE.md  CLEAN_STARTER_IMPLEMENTATION.md  INSTALLATION.md  LICENSE  README.md  SEARCH_ENHANCEMENTS.md  SETUP_COMPLETE.md  amplify  amplify_cli.py  amplify_docs_server.py  amplify_field_types_reference.md  claude_desktop_config.json  comprehensive_test.py  debug_output.txt  doc_indexer.py  documentation_index.json  enhanced_scraper.py  final_verification.py  main.py  project_detection.py  pyproject.toml  quick_test_fetch.py  run_amplify_mcp.sh  run_server.bat  run_server.sh  test_advanced_patterns.py  test_clean_starter.py  test_clean_starter_debug.py  test_mcp_fixes.py  test_mcp_tools.py  test_server.py  verify_clean_starter.py
